Add: initial changeset configuration and new documentation for Nopends OpenAPI updates

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -5,7 +5,7 @@
   "fixed": [["nopends-core", "nopends-ui", "create-nopends-app"]],
   "linked": [],
   "access": "restricted",
-  "baseBranch": "dev",
+  "baseBranch": "canary",
   "updateInternalDependencies": "patch",
   "privatePackages": { "version": false },
   "bumpVersionsWithWorkspaceProtocolOnly": true,
